--- a/main.html
+++ b/main.html
@@ -31,10 +31,10 @@
                 <a class="nav-link" href="anelli.html"> <h3>Anelli</h3></a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#"><h3>Collane</h3></a>
+                <a class="nav-link" href="collane.html"> <h3>Collane</h3></a>
               </li>
               <li class="nav-item">
-                <a class="nav-link"><h3>Orecchini</h3></a>
+                <a class="nav-link" href="orecchini.html"> <h3>Orecchini</h3></a>
               </li>
             </ul>
           </div>
@@ -76,12 +76,12 @@
         <h1>Anelli</h1> <p>Nuova collezione "Halo"</p>
         </div>
         <div class="col-12 col-md-6 col-xl-3">
-        <a href="tratt_front.html"><img src="images/home2.jfif" class="w-100"></a>
-        <h1>Collane</h1>  <p>Alberi, pietre o aiuole? I trattorini a taglio frontale consentono di gestire qualsiasi situazione con il massimo controllo e un comfort assoluto</p>
+        <a href="collane.html"><img src="images/home2.jfif" class="w-100"></a>
+        <h1>Collane</h1>  <p></p>
         </div>
         <div class="col-12 col-md-6 col-xl-3">
-        <a href="tratt_giard.html"><img src="images/home3.jfif" class="w-100"></a>
-        <h1>Orecchini</h1> <p>I trattorini affrontano senza fatica tutte le curve, le angolazioni più difficili e i piccoli ostacoli: dovrai soltanto sederti e goderti il viaggio</p>
+        <a href="orecchini.html"><img src="images/home3.jfif" class="w-100"></a>
+        <h1>Orecchini</h1> <p></p>
         </div>
 
    
