--- a/anelli.html
+++ b/anelli.html
@@ -8,10 +8,36 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
-    <title>Hello, world!</title>
+    <title>ANELLI</title>
   </head>
   <body>
-    <h1>Hello, world!</h1>
+    
+<!-- NAVBAR -------------------------------------------------------------------------------------------------------------------------------------------------------------------------->
+
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="#"> <h2>Gioielleria Grifagni</h2></a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link" aria-current="page" href="main.html"><h3>Home</h3></a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="anelli.html"> <h3>Anelli</h3></a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="collane.html"> <h3>Collane</h3></a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="orecchini.html"> <h3>Orecchini</h3></a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
 
 
 
