--- a/collane.html
+++ b/collane.html
@@ -8,7 +8,7 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
-    <title>ANELLI</title>
+    <title>COLLANE</title>
   </head>
   <body>
     
@@ -44,13 +44,13 @@
   <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
     <div class="carousel-inner">
     <div class="carousel-item active">
-        <img src="images/carane1.jpg" class="d-block w-100" alt="...">
+        <img src="images/colloser1.jfif" class="d-block w-100" alt="...">
     </div>
     <div class="carousel-item">
-        <img src="images/carane2.jpg" class="d-block w-100" alt="...">
+        <img src="images/colloser2" class="d-block w-100" alt="...">
     </div>
     <div class="carousel-item">
-        <img src="images/carane3.jpg" class="d-block w-100" alt="...">
+        <img src="images/colloser3.jpg" class="d-block w-100" alt="...">
     </div>
     </div>
     <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
@@ -69,20 +69,20 @@
 <div class="container-fluid">
     <div class="row">
     <div class="col-12 col-md-6 col-xl-3">
-    <img src="images/anello1.jfif" class="w-100"> </a>
-    <h1>Anello Attract Trilogy</h1> <p>Rotondo, Bianco, Placcato rodio <ol></ol> <h3>95,00 EUR</h3></p>
+    <img src="images/collana1.jfif" class="w-100"> </a>
+    <h1>Collana Swarovski Infinity</h1> <p>Infinito e cuore, Bianco, Mix di placcature <ol></ol> <h3>105,00 EUR</h3></p>
     </div>
     <div class="col-12 col-md-6 col-xl-3">
-    <img src="images/anello2.jfif" class="w-100"></a>
-    <h1>Anello Attract</h1> <p>Rotondo, Pavé, Bianco, Placcato color oro Rosa <ol></ol> <h3>95,00 EUR</h3></p>
+    <img src="images/collana2.jfif" class="w-100"></a>
+    <h1>Collana Millenia</h1> <p>Swarovski Zirconi con taglio Pear, Bianco, Placcato rodio <ol></ol> <h3>450,00 EUR</h3></p>
     </div>
     <div class="col-12 col-md-6 col-xl-3">
-    <img src="images/anello3.jfif" class="w-100"></a>
-    <h1>Anello Swarovski Sparkling Dance</h1> <p>Rotondo, Bianco, Placcato rodio <ol></ol> <h3>105,00 EUR</h3></p>
+    <img src="images/collana3.jfif" class="w-100"></a>
+    <h1>Collana Swarovski Infinity</h1> <p>Cuore, Bianco, Mix di placcature <ol></ol> <h3>105,00 EUR</h3></p>
     </div>
     <div class="col-12 col-md-6 col-xl-3">
-    <img src="images/anello4.jfif" class="w-100"></a>
-    <h1>Anello Swarovski Sparkling Dance</h1> <p>Rotondo, Bianco, Placcato color oro Rosa <ol></ol> <h3>105,00 EUR</h3></p>
+    <img src="images/collana4.jfif" class="w-100"></a>
+    <h1>Collana Attract Soul</h1> <p>Cuore, Bianco, Placcato rodio <ol></ol> <h3>85,00 EUR</h3></p>
     </div>
 
 
