--- a/collane.html
+++ b/collane.html
@@ -44,10 +44,10 @@
   <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
     <div class="carousel-inner">
     <div class="carousel-item active">
-        <img src="images/colloser1.jfif" class="d-block w-100" alt="...">
+        <img src="images/colloser1.jpg" class="d-block w-100" alt="...">
     </div>
     <div class="carousel-item">
-        <img src="images/colloser2" class="d-block w-100" alt="...">
+        <img src="images/colloser2.jpg" class="d-block w-100" alt="...">
     </div>
     <div class="carousel-item">
         <img src="images/colloser3.jpg" class="d-block w-100" alt="...">
